--- a/_posts/2013.12/2013-12-08-fisheye.md
+++ b/_posts/2013.12/2013-12-08-fisheye.md
@@ -11,8 +11,65 @@ FISHEYE　鱼眼修复
 
 -----------------------------------------------------------------
 
-最近由于tuo师兄的项目要求，要对鱼眼图像（用鱼眼镜头拍摄的图像）校正，如图１
+最近由于tuo师兄的项目要求，要对鱼眼图像（用鱼眼镜头拍摄的图像）校正，如下图所示
 
+校正前
+![eg1](https://raw.github.com/lxiongh/lxiongh.github.com/master/_posts/image/fisheye/eg1.jpg)
 
+校正后
+![eg1_adj](https://raw.github.com/lxiongh/lxiongh.github.com/master/_posts/image/fisheye/eg1_adj.jpg)
 
-*注：[更多源码](http://blog.csdn.net/zouxy09/article/details/8550952)*
+<pre class="prettyprint">
+function [ img ] = fisheye3( im, R1, R2, N )
+%FISHEYE2 Summary of this function goes here
+%   Detailed explanation goes here
+
+theta0 = pi/N;
+[row,col,ch] = size(im);
+
+center_x = floor(col/2);
+center_y = floor(row/2);
+D = floor(2*R2*tan(theta0));
+img = uint8(zeros(R2-R1+1,D*N,ch));
+
+[Y,X] =  meshgrid(R1:size(img,1)+R1-1,1:size(img,2));
+% tic;
+for i=1:numel(X)
+    x1= X(i);
+    y1 = Y(i);
+    
+    n = floor(x1/D) + 1;
+    a = floor(D/2) + (n-1)*D + 1;
+    b = 1;
+    c = (n-1)*D + 1;
+    d = floor(a - y1*tan(theta0)) + 1;
+    
+    k1 = y1/R2;
+    y2 = y1;
+    x2 = (x1-c)*k1 + d;
+    
+    dx2 = x2 - a;
+    dy2 = y2 - b;
+    theta2 = atan(dx2/(dy2+eps));
+    rho2 = sqrt(dx2^2 + dy2^2);
+    
+    k2 = cos(theta2);
+    rho3 = rho2*k2;
+    theta3 = theta2;
+    
+    rho4 = rho3;
+    theta4 = theta3 + (n-1)*2*theta0;
+    
+    x4 = floor(center_x + rho4*sin(theta4));
+    y4 = floor(center_y + rho4*cos(theta4));
+  
+    if ch==3
+        img(y1-R1+1,x1,:) = [im(y4,x4,1), im(y4,x4,2), im(y4,x4,3)];
+    else
+        img(y1-R1+1,x1) = im(y4,x4);
+    end
+end
+% toc;
+</pre>
+
+<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
