--- a/_posts/2013.12/2013-12-08-fisheye.md
+++ b/_posts/2013.12/2013-12-08-fisheye.md
@@ -19,7 +19,7 @@ FISHEYE　鱼眼修复
 校正后
 ![eg1_adj](https://raw.github.com/lxiongh/lxiongh.github.com/master/_posts/image/fisheye/eg1_adj.jpg)
 
-<pre class="prettyprint">
+<pre class="prettyprint lang-m">
 function [ img ] = fisheye3( im, R1, R2, N )
 %FISHEYE2 Summary of this function goes here
 %   Detailed explanation goes here
