--- a/_posts/2013.12/2013-12-08-fisheye.md
+++ b/_posts/2013.12/2013-12-08-fisheye.md
@@ -19,6 +19,12 @@ FISHEYE　鱼眼修复
 校正后
 ![eg1_adj](https://raw.github.com/lxiongh/lxiongh.github.com/master/_posts/image/fisheye/eg1_adj.jpg)
 
+算法的基本思想如下图所示。即以图像（a）中点为中心，以R1为半径，将图像分为n等份的扇形，后将扇形以逆时针方向
+展开（b）。图（b）至图（c）进行图的径向伸缩变换，图（c）至图（d）进行图的水平伸缩变换。
+
+![algorithm](https://raw.github.com/lxiongh/lxiongh.github.com/master/_posts/image/fisheye/algorithm.jpg)
+
+核心代码
 <pre class="prettyprint lang-m">
 function [ img ] = fisheye3( im, R1, R2, N )
 %FISHEYE2 Summary of this function goes here
