--- a/_posts/2014.04/2014-04-15-Sicily_1001.md
+++ b/_posts/2014.04/2014-04-15-Sicily_1001.md
@@ -35,7 +35,7 @@ tags : [Algorithm]
 
 ------
 
-<pre class="prettyprint">
+{% highlight cpp linenos %}
 //============================================================================
 // Name        : 1001.cpp
 // Author      : xionghaoliu
@@ -76,6 +76,4 @@ int main() {
 	}
 	return 0;
 }
-</pre>  
-
-<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
+{% endhighlight %}
