更改左侧栏为中文

--- a/_posts/2014.04/2014-04-15-Sicily_1001.md
+++ b/_posts/2014.04/2014-04-15-Sicily_1001.md
@@ -31,7 +31,7 @@ tags : [Algorithm]
 1. 跟第i个数字一起翻译，那么前i-1个就是一个子状态了
 2. 单独翻译，那前i个作为一个整体
 
-于是状态的转移就是：dp[i] = dp[i-1] + dp[i-2], 当然还需要考虑新加入字符是'0'与加入前末位字符是‘0’的情况。
+于是状态的转移就是：dp[i] = dp[i-1] + dp[i-2], 当然还需要考虑新加入字符是'0'与加入前末位字符是'0'的情况。
 
 ------
 
