--- a/_posts/2013.07/2013-07-12-code_test.md
+++ b/_posts/2013.07/2013-07-12-code_test.md
@@ -1,9 +1,34 @@
 ---
 layout: post
-title:  代码高亮
+title:  代码语法高亮
 category : github
 tagline:  
 tags : [code, highlight]
+---
+
+Jekyll 已内建支持语法高亮
+-------
+
+Jekyll已经支持超过[100种语言](http://pygments.org/languages/)的语法高度问题，要想让代码高亮，需要以如下形式写代码
+
+{% highlight ruby %}
+def foo
+puts 'foo'
+end
+{% endhighlight %}
+
+
+如果想在代码里加上行编号，则应该以如下形式写代码
+
+{% highlight ruby linenos %}
+def foo
+puts 'foo'
+end
+{% endhighlight %}
+
+更多详细的说明，可以参见[Code snippet highlighting](http://jekyllrb.com/docs/templates/)。注：由于无法将源码显示出来，所示代码高亮语法请参见本博文的[Github Raw File](https://raw.githubusercontent.com/lxiongh/lxiongh.github.com/master/_posts/2013.07/2013-07-12-code_test.md)文件。
+
+
 ---
 
 #Google Code Prettify
@@ -52,7 +77,17 @@ public:
   // will not interfere with embedded tags.
 }
 </pre> 
-
 [Click for more detail](https://google-code-prettify.googlecode.com/svn/trunk/README.html)
+
+而Jekyll内建语法高亮的效果更美观，如下所示
+
+{% highlight java linenos %}
+public:
+  // Voila
+  static const string VOILA = "Voila";
+    
+  // will not interfere with embedded tags.
+}
+{% endhighlight %}
 
 <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
