--- a/_posts/2014.04/2014-04-15-up_up_up.md
+++ b/_posts/2014.04/2014-04-15-up_up_up.md
@@ -17,7 +17,7 @@ tags : [down, interviews]
 >快排、堆排等算法你会写吗？
 >数据结构知识你还知道多少？　....
 
-答案很明显，ACM你从来没有参加过，排序算法你也早忘了，数据结构知识也早归还给老师了。更重要的事，你既然已经知道了自己对这些知识早已生疏，那为什么在笔试前还是没有去认真复习呢？你说你的时间都用来写论文了，根本抽不出时间来看复习算法。胡说，这都是借口。昨晚都还看到你在玩酷跑，周末都还陪着朋友去看电影，这会是没有时间？？　**你要清楚，在程序员笔试这方面，你比你周围的人还要差。他们都认真准备了笔试，都着重复习了数据结构，而你却还却还沉浸在各大电子竞赛奖项中，何其愚蠢，何其可悲**, 那么得到不面试通知，也是意料之外，情理之中的事情了。
+答案很明显，ACM你从来没有参加过，排序算法你也早忘了，数据结构知识也早归还给老师了。更重要的事，你既然已经知道了自己对这些知识早已生疏，那为什么在笔试前还是没有去认真复习呢？你说你的时间都用来写论文了，根本抽不出时间来看复习算法。胡说，这都是借口。昨晚都还看到你在玩酷跑，周末都还陪着朋友去看电影，这会是没有时间？？　**你要清楚，在程序员笔试这方面，你比你周围的人还要差。他们都认真准备了笔试，都着重复习了数据结构，而你却还却还沉浸在各大电子竞赛奖项中，何其愚蠢，何其可悲**, 那么得到不面试通知，也是意料之外，情理之中的事情了。**你不去笔试或者面试下，就不知道自己到底哪里欠缺了**。
 
 ---------
 
