--- a/_posts/2013.12/2013-12-08-fisheye.md
+++ b/_posts/2013.12/2013-12-08-fisheye.md
@@ -24,7 +24,7 @@ FISHEYE　鱼眼修复
 ![algorithm](https://raw.github.com/lxiongh/lxiongh.github.com/master/_posts/image/fisheye/algorithm.jpg)
 
 核心代码
-{% highlight cpp linenos %}
+{% highlight matlab linenos %}
 function [ img ] = fisheye3( im, R1, R2, N )
 %FISHEYE2 Summary of this function goes here
 %   Detailed explanation goes here
