edit code highline

--- a/_posts/2013.07/2013-07-12-code_test.md
+++ b/_posts/2013.07/2013-07-12-code_test.md
@@ -18,7 +18,7 @@ end
 {% endhighlight %}
 
 
-如果想在代码里加上行编号，则应该以如下形式写代码
+`ruby`为代码的语言，更多代码的缩写见链接[http://pygments.org/docs/lexers/](http://pygments.org/docs/lexers/)，另外如果想在代码里加上行编号，则应该以如下形式写代码
 
 {% highlight ruby linenos %}
 def foo
